# claude-narrator

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  README.zh.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: configure.md  setup.md  status.md
docs/: README.ja.md  README.zh.md  claude-narrator-PRD.md
docs/superpowers/plans/: 2026-03-27-claude-narrator.md  2026-03-27-personality-and-context-monitor.md  2026-04-01-smart-narration.md
docs/superpowers/specs/: 2026-03-27-claude-narrator-design.md  2026-03-27-personality-and-context-monitor-design.md  2026-04-01-smart-narration-design.md
src/claude_narrator/: __init__.py  __main__.py  cache.py  cli.py  config.py  context_monitor.py  daemon.py  installer.py  player.py  queue.py  sounds.py  tool_registry.py  web.py
src/claude_narrator/hooks/: on_event.py
src/claude_narrator/i18n/: en.casual.json  en.json  en.professional.json  en.tengu.json  ja.casual.json  ja.json  ja.professional.json  ja.tengu.json  tengu_words.json  zh.casual.json  zh.json  zh.professional.json  zh.tengu.json
src/claude_narrator/ipc/: __init__.py  base.py  http.py  unix_socket.py
src/claude_narrator/narration/: coalescer.py  filters.py  llm.py  template.py  (+1 more)
tests/: conftest.py  test_cache.py  test_cli.py  test_coalescer.py  test_config.py  test_context_monitor.py  test_daemon.py  test_filters.py  test_hook.py  test_installer.py  test_ipc.py  test_llm.py  test_personality.py  test_player.py  test_queue.py  test_sounds.py  test_template.py  test_tool_registry.py  test_tts.py  test_verbosity.py  test_web.py
(+6 files in other folders)
