[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-narrator"
version = "0.1.0"
description = "TTS audio narration for Claude Code - hear what Claude is doing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "hoshizora" }]
keywords = ["claude-code", "tts", "narration", "hooks", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "edge-tts>=6.1.0",
    "pygame>=2.5.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
openai = ["httpx>=0.27.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
claude-narrator = "claude_narrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
